VSE: Artifacts in histogram (NVIDIA) #110976
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#110976
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 535.98
Blender Version
Broken: version: 3.6.1, branch: blender-v3.6-release, commit date: 2023-08-08 12:39, hash:
318aaa6d6bc7
Worked: (newest version of Blender that worked as expected)
Short description of error

Exact steps for others to reproduce the error
move the UI region/border and zoom into histogram/chroma vectoroscope/luma waveform and purple artifacts appear. tested on blender 3.5.1, 3.6.1, 4.0a
It is possible that this is a driver issue, could be similar to the old stereo view bug.
Could you try using a different version of Nvidia driver?
I can confirm on Windows+NVIDIA when histogram (same for other display modes) region is smaller.
Artifacts do not appear with AMD iGPU.
Artifacts in VSE histogramto VSE: Artifacts in histogram (NVIDIA)I installed newest nvidia studio driver 536.99. No change.
I can't reproduce with NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 526.98
Could be similar to issue where no background was drawn so memory was uninitialized and that caused glitches like this. Or at least that's how I remembered
5cd2be7d54
I can make test build so @shaqualeek can check, otherwise I would need to seek help with this.
I have stepped through debugger and I see
UI_ThemeClearColor()
is called so this is probably different issue, maybe driver related. @Jeroen-Bakker can you check if you can reproduce and if the issue is on our side?Think this is driver/GPU specific problem since I'm not observing drawing problems on AMD iGPU
Update them and see if that makes any difference in the result
I tried the latest game-ready driver and the oldest official release I could find - 528.49 - in both cases, the glitch remains.
edit: Anyway, this is not something crucial to me..I just wanted to help. Maybe you could discuss this with the nVidia guys you cooperate with when there's a chance.
Can confirm the glitch on
Blender 3.6.1
NVidia RTX 4060 536.99 (updated Studio drivers yesterday)
System Information
Operating system: Linux-6.2.0-26-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 535.86.05
Blender Version
version: 4.0.0 Alpha, branch: main, commit date: 2023-08-07 16:43, hash:
9e7e0a01b291
version: 3.6.2, branch: blender-v3.6-release, commit date: 2023-08-16 16:43, hash:
e53e55951e7a
I couldn't reproduce the issue on any of the above Blender versions. Maybe this happens only on Windows?
I will try to reproduce by building a similar configuration
I am not able to reproduce the issue using
Will try with a 30-series card as well. I am able to reproduce it on RTX5000 card.
@iss the issue is that the scope images have their alpha set to 0.0, but as the blending is turned (GPU_BLEND_NONE) the driver makes an incorrect decision that for alpha blending on those hardware. A partial fix is to set the alpha of the scope buffers to 1.0f
But this still makes the artifact appear around the scopes:

this update solved the issue on my machine. thank you!
System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42
Blender Version
Broken: version: 4.0.0 Alpha, branch: PR112665, commit date: 2023-09-21 10:51, hash:
ca1c8fb02ff4